// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons As a link 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <a
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr sc-AxmLO gXSYqH"
      href="/"
    >
      Create project
    </a>
  </div>
</div>
`;

exports[`Storyshots Buttons Button 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
    >
      Create project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons DangerButton 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr sc-fzozJi iomXmU"
    >
      Delete project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons PrimaryButton 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr sc-AxmLO gXSYqH"
    >
      Create project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons QuietButton 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr sc-fzoLsD hbDbFs"
    >
      Create project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons Set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 gfuNnn sc-AxmLO iyIcyd"
      disabled=""
    >
      Create project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons Set to full width 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 bkRlmc sc-AxmLO gXSYqH"
    >
      Create project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons With a selected Icon 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
    >
      <svg
        aria-hidden="true"
        class="sc-AxirZ bwFfrg"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="1.14285714em"
        icon="add"
        mr="half"
        viewBox="0 0 24 24"
        width="1.14285714em"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      Create project
    </button>
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
    >
      Create project
      <svg
        aria-hidden="true"
        class="sc-AxirZ bMepUP"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="1.14285714em"
        icon="add"
        ml="half"
        viewBox="0 0 24 24"
        width="1.14285714em"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons With a selected size 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hSnlTw"
    >
      Create project
    </button>
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
    >
      Create project
    </button>
    <button
      class="Button__WrapperButton-sc-1omxup2-0 bDgRPA"
    >
      Create project
    </button>
  </div>
</div>
`;
